--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/54df67fce3.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Aplikacja Zakupowa</title>
 </head>
 <body>
     <div id="app"/>
